2011-02-10  Alan Modra  <amodra@gmail.com>

	* ld-gc/start.d: Exclude frv-*-linux*.
	* ld-misc/defsym1.d: Likewise.

2011-02-09  Alan Modra  <amodra@gmail.com>

	* ld-elfvsb/elfvsb.exp: Don't run any non-PIC tests on powerpc*-linux.
	* ld-gc/gc.exp: Ensure powerpc64 test continues to fail.
	* ld-srec/srec.exp: Don't edit toc on powerpc64.

2011-01-23  Alan Modra  <amodra@gmail.com>

	* ld-scripts/sane1.d, * ld-scripts/sane1.t: New test.
	* ld-scripts/expr.exp: Run it.

2011-01-18  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-x86-64/ilp32-4.d: Updated.

2011-01-17  Richard Sandiford  <richard.sandiford@linaro.org>

	* ld-arm/arm-rel32.s, ld-arm/arm-rel32.d: New testcase.
	* ld-arm/arm-elf.exp: Run it.

2011-01-17  Richard Sandiford  <richard.sandiford@linaro.org>

	* ld-arm/gc-thumb-lib.s, ld-arm/gc-thumb.s,
	ld-arm/gc-thumb.d: New test.
	* ld-arm/arm-elf.exp: Run it.

2011-01-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-x86-64/ia32-2.d: Replace --n32 with --x32.
	* ld-x86-64/ilp32-1.d: Likewise.
	* ld-x86-64/ilp32-2.d: Likewise.
	* ld-x86-64/ilp32-3.d: Likewise.
	* ld-x86-64/ilp32-4.d: Likewise.
	* ld-x86-64/ilp32-5.d: Likewise.
	* ld-x86-64/lp64-3.d: Likewise.
	* ld-x86-64/x86-64.exp: Likewise.

2011-01-14  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-x86-64/ilp32-5.d: New.
	* ld-x86-64/ilp32-5.s: Likewise.

	* ld-x86-64/x86-64.exp: Run ilp32-5.

2011-01-13  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-x86-64/ilp32-4.d: New.

	* ld-x86-64/x86-64.exp: Run ilp32-4.

2011-01-13  H.J. Lu  <hongjiu.lu@intel.com>

	PR ld/12356
	* ld-scripts/defined.exp: Run defined5.

	* ld-scripts/defined5.d: New.
	* ld-scripts/defined5.s: Likewise.
	* ld-scripts/defined5.t: Likewise.

2011-01-13  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/defined4.d: Xfail rs6000-*-aix*.  Skip mips*-*-*
	and mmix-*-*.

	* ld-scripts/expr2.d: Xfail rs6000-*-aix* and arm-*-*aout.

2011-01-10  H.J. Lu  <hongjiu.lu@intel.com>

	* ld-scripts/assert.exp: Run assert2.

	* ld-scripts/assert2.d: New.