@@ -1,6 +1,6 @@
 	.globl	defined
 	.data
 	.byte 0
-	.section .data.cacheline_aligned
+	.text
 defined:
 	.byte 0
